[package]
name = "etsu"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
config = { version = "0.15.11", features = ["toml"] }
directories = "6.0.0"
futures = "0.3.31"
glfw = "0.59.0"
once_cell = "1.21.3"
rdev = "0.5.3"
sea-query = { version = "0.32.3", features = ["thread-safe", "backend-postgres", "backend-sqlite"] }
sea-query-binder = { version = "0.7.0", features = ["sqlx-sqlite", "sqlx-postgres"] }
serde = { version = "1.0.219", features = ["derive"] }
signal-hook = { version = "0.3.17", features = ["channel"] }
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "postgres", "macros", "migrate"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
twox-hash = "2.1.0"
