[package]
name = "etsu"
version = "0.1.0"
edition = "2021"
authors = ["seatedro"]
description = "An elegant metrics collector for tracking keyboard and mouse usage"
repository = "https://github.com/seatedro/etsu"
license = "MIT"

[dependencies]
anyhow = "1.0.97"
config = { version = "0.15.11", features = ["toml"] }
directories = "6.0.0"
futures = "0.3.31"
glfw = "0.59.0"
once_cell = "1.21.3"
rdev = "0.5.3"
sea-query = { version = "0.32.3", features = [
    "thread-safe",
    "backend-postgres",
    "backend-sqlite",
] }
sea-query-binder = { version = "0.7.0", features = [
    "sqlx-sqlite",
    "sqlx-postgres",
] }
serde = { version = "1.0.219", features = ["derive"] }
signal-hook = { version = "0.3.17", features = ["channel"] }
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "sqlite",
    "postgres",
    "macros",
    "migrate",
] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
twox-hash = "2.1.0"


[package.metadata.bundle]
name = "Etsu"
identifier = "com.seatedro.etsu"
icon = ["icons/etsu.png", "icons/etsu@2x.png"]
version = "0.1.0"
copyright = "Copyright (c) 2025 seatedro. All rights reserved."
category = "Utility"
short_description = "An elegant metrics collector for tracking keyboard and mouse usage"
long_description = """
Etsu tracks your keyboard and mouse usage metrics.
It collects information on keypresses, mouse clicks, scroll steps,
and mouse distance traveled, storing them in a local database.
"""
license = "MIT"
osx_minimum_system_version = "10.15"
